# NVR

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml  loadtest.yml  release.yml  sanitize.yml
appliance/: build_iso.sh
appliance/autoinstall/: meta-data  user-data
appliance/grub/: grub-nvr.cfg
appliance/plymouth/: nvr.plymouth  nvr.script
config/: nvr.yaml
deploy/: 50-unattended-upgrades.conf  branding.json  camera_catalog.sample.json  nvr-archive-compress.service  nvr-archive-compress.timer  nvr-db-check.service  nvr-kiosk.service  nvr-prototype.service  nvr-prototype.sysctl.conf
deploy/apparmor/: usr.bin.nvr_prototype
deploy/debian/: postinst  prerm
deploy/grafana/: nvr-dashboard.json
deploy/logrotate/: nvr-prototype-hooks
deploy/nginx/: nginx-archive-accel.conf  nvr.conf
deploy/nginx/conf.d/: README.md
deploy/nginx/snippets/: nvr-prototype-archive-accel.conf  nvr-ssl-letsencrypt.conf  nvr-ssl-self-signed.conf
docs/: ARCHITECTURE_TRASSIR_PLATFORM.md  AUDIT_2026-05.md  HTTP_CONCURRENCY.md  LICENSE_TICKET.md  LOADTEST_SLO.md  LOGROTATE_HOOKS.md  MQTT_STATUS.md  ONVIF_PULLPOINT_CAMERA_MATRIX.md  PARITY_RECORDER_1_0_STATUS.md  PLAN_RECORDER_ANALYTICS_LICENSE.md  PLATFORM_TIER2_SPEC.md  PRE_FIELD_AUDIT_2026-05-13.md  RUNBOOK.md  SDK_AND_OPENAPI.md  SECURITY.md  SECURITY_EXTERNAL_AUTH.md  SLO.md  SLO_RUN_LOG_TEMPLATE.md  SNMP_INTEGRATION.md  TRASSIR_HORIZON1_BACKLOG.md  TRASSIR_HORIZON2_ANALYTICS.md  TRASSIR_HORIZON3_CORP_UI.md  TRASSIR_PARITY_ROADMAP.md  TRASSIR_POLISH_PHASES.md  TRASSIR_ROI_RECORDING_SCOPE.md
include/nvr/: AnalyticsWorker.hpp  ArchiveManager.hpp  CameraPipeline.hpp  CameraSupervisor.hpp  Config.hpp  EventBus.hpp  FFmpegDecoder.hpp  FFmpegEncoder.hpp  HlsMuxer.hpp  LicenseGate.hpp  Logger.hpp  MotionDetector.hpp  MotionEvent.hpp  PreEventBuffer.hpp  PythonHookManager.hpp  RecordingMuxerPolicy.hpp  RecordingSchedule.hpp  SubStreamEncoder.hpp  ThreadSafeQueue.hpp  license_canonical.hpp
include/nvr/ai/: AiPipeline.hpp  FaceRecognizer.hpp  IDetector.hpp  OpenVINODetector.hpp  Tracker.hpp
include/nvr/api/: Auth.hpp  HttpCommon.hpp  HttpRouteHelpers.hpp  HttpServer.hpp  RouteApplication.hpp  RouteArchiveEvents.hpp  RouteAuth.hpp  RouteCamerasLicense.hpp  RouteConfig.hpp  RouteInfra.hpp  RouteLiveLayouts.hpp  RouteNotifications.hpp  RouteStream.hpp  RouteUsersAudit.hpp
include/nvr/notify/: Channels.hpp  MqttTcp311.hpp  NotificationManager.hpp
include/nvr/obs/: Metrics.hpp
include/nvr/onvif/: EnumerateStreams.hpp  EventsPull.hpp  SoapClient.hpp  Types.hpp  WsDiscovery.hpp
include/nvr/store/: ConfigStore.hpp  Crypto.hpp  Database.hpp
include/nvr/system/: HwMonitor.hpp
nvr-shell/: Cargo.toml
nvr-shell/src/: main.rs
observability/grafana/: nvr-dashboard.json
scripts/: build_hang_watch.sh  build_nvr_shell.sh  ci_http_smoke.sh  docker_build_deb.sh  k6-nvr-smoke.js  nvr_archive_compress.sh  nvr_backup.sh  nvr_db_check.sh  nvr_kiosk_bootstrap.sh  nvr_kiosk_launcher.sh  nvr_recover.sh  nvr_restore.sh  nvr_sync_nginx_archive_accel.sh  nvr_update.sh  script.py  server_sync_from_github.sh  setup_firewall.sh  setup_ubuntu_nvr.sh
scripts/loadtest/: k6-health.js  k6-smoke.js
src/: main.cpp
src/ai/: AiPipeline.cpp  FaceRecognizer.cpp  OpenVINODetector.cpp  Tracker.cpp
src/analytics/: AnalyticsWorker.cpp  MotionDetector.cpp
src/api/: Auth.cpp  HttpRouteHelpers.cpp  HttpServer.cpp  RouteApplication.cpp  RouteArchiveEvents.cpp  RouteAuth.cpp  RouteCamerasLicense.cpp  RouteConfig.cpp  RouteInfra.cpp  RouteLiveLayouts.cpp  RouteNotifications.cpp  RouteStream.cpp  RouteUsersAudit.cpp
src/archive/: ArchiveManager.cpp
src/camera/: CameraPipeline.cpp  FFmpegDecoder.cpp  FFmpegEncoder.cpp  HlsMuxer.cpp  PreEventBuffer.cpp  SubStreamEncoder.cpp
src/cli/: nvr_cli.cpp
src/core/: CameraSupervisor.cpp  Config.cpp  EventBus.cpp  LicenseGate.cpp  Logger.cpp  RecordingSchedule.cpp
src/notify/: EmailChannel.cpp  MqttChannel.cpp  MqttTcp311.cpp  NotificationManager.cpp  SyslogChannel.cpp  TelegramChannel.cpp  WebhookChannel.cpp
src/obs/: Metrics.cpp
src/onvif/: EnumerateStreams.cpp  EventsPull.cpp  MediaService.cpp  SoapClient.cpp  WsDiscovery.cpp
src/python/: PythonHookManager.cpp
src/store/: ConfigStore.cpp  Crypto.cpp  Database.cpp
src/store/migrations/: 001_initial.sql  002_ai.sql
src/system/: HwMonitor.cpp
tests/: CMakeLists.txt  test_archive_eviction.cpp  test_config_archive.cpp  test_config_store.cpp  test_config_yaml.cpp  test_crypto.cpp  test_database_migrations.cpp  test_license_gate.cpp  test_motion_roi.cpp  test_onvif_xml.cpp  test_recording_muxer_policy.cpp  test_recording_schedule.cpp  test_thread_safe_queue.cpp
tools/: nvr_license_sign.cpp
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/e2e/: cameras.spec.ts  playwright.config.ts  smoke.spec.ts
webui/public/: manifest.webmanifest  sw.js
webui/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
webui/src/components/: ErrorBoundary.tsx  LiveTile.tsx  RecordingScheduleEditor.tsx  RequireRole.tsx
webui/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Table.tsx  Tabs.tsx  Toast.tsx  index.ts
webui/src/lib/: api.ts  recordingSchedule.ts
webui/src/locales/: en.json  ru.json
webui/src/pages/: Ai.tsx  Archive.tsx  Audit.tsx  Cameras.tsx  Dashboard.tsx  Dlq.tsx  Events.tsx  Live.tsx  LocalDashboard.tsx  Login.tsx  Map.tsx  Motion.tsx  Notifications.tsx  Setup.tsx  Storage.tsx  System.tsx  Users.tsx
